--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
       </div>
     </div>
   </div>
+  <div>
   <input type="number" id="duration" value="5" />
   <label for="duration">Breath Time</label>
   <input type="number" id="sessionDuration" value="2" />
   <label for="sessionDuration">Session Duration (min)</label>
+  </div>
   <button id="start">Start Breathing</button>
   <script type="module" src="/src/main.ts"></script>
 </body>
