--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <label for="sessionDuration">Session Duration (min)</label>
   </div>
   <button id="start">Start Breathing</button>
+  <p style="position: absolute; bottom: 10px; left: 10px;">Made With &lt;3 By <a style="color: white;" target="_blank" rel="noopener noreferrer" href="https://codaea.com">Codaea</a></p>
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
